--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/bookingparty
 spring.datasource.username=root
-spring.datasource.password=12345
+spring.datasource.password=Thanh25102
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 #Set actual database's behaviors everytime application starts.
@@ -13,3 +13,9 @@ spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 server.error.include-message=always
+
+#Cloudinary
+cloudinary.cloud_name=com-buimahthanh
+cloudinary.api_key=767693717832892
+cloudinary.api_secret=prGZdfuasWtSvI2GMocQiZ9Bh9w
+cloudinary.secure=true
