feat(party-hosts): done

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,10 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 
 #Shows SQL strings, In case of troubleshooting SQL performance issues caused by super long SQL strings.
-spring.jpa.show-sql=false
+spring.jpa.show-sql=true
+#format SQL strings to make it easier to read.
+spring.jpa.properties.hibernate.format_sql=true
+
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
