feat(payment): vn-pay sandbox

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/bookingparty
 spring.datasource.username=root
-spring.datasource.password=12345
+spring.datasource.password=Thanh25102
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 #Set actual database's behaviors everytime application starts.
@@ -22,3 +22,14 @@ cloudinary.cloud_name=com-buimahthanh
 cloudinary.api_key=767693717832892
 cloudinary.api_secret=prGZdfuasWtSvI2GMocQiZ9Bh9w
 cloudinary.secure=true
+
+#payment - url - frontend
+payment.return-url=http://localhost:3000/vnpay-payment
+
+#payment - vnpay
+vnpay.payUrl=https://sandbox.vnpayment.vn/paymentv2/vpcpay.html
+vnpay.tmnCode=BG8NMRDO
+vnpay.hashSecret=CBAJQSYWRDRUUDJHKVJEAWEBSMBLQXRZ
+vnpay.apiUrl=https://sandbox.vnpayment.vn/merchant_webapi/api/transaction
+vnpay.version=2.1.0
+vnpay.command=pay
